Fixed some package names

--- a/examples/RubyInterpreter/servlets.properties
+++ b/examples/RubyInterpreter/servlets.properties
@@ -1,4 +1,4 @@
-servlet.RubyInterpreter.code=mtc.RubyInterpreter
+servlet.RubyInterpreter.code=mcl.RubyInterpreter
 servlet.RubyInterpreter.extension=rb
 
 servlets.startup=RubyInterpreter
